# keplercalc

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.rst  conf.py  examples.rst  index.rst
src/: keplercalc.py  mathhelpers.py
tests/: test.ic  test_genga.ic  test_keplercalc.py
